# Copyright (c) 2023-2025 Christian Hinkle, Brian Hinkle.

cmake_minimum_required(VERSION 4.0)

project(MeddySuperproject
  LANGUAGES CXX
  )

# Set up testing. Defines `BUILD_TESTING` which is ON by default. This must be called by the top-level project only.
if(PROJECT_IS_TOP_LEVEL)
  include(CTest)
endif()

#
# We want to be build interface users of our subprojects instead of install
# interface users, i.e., we want to build with our subprojects instead of building off
# of pre-built binaries of them. This is how the development environment should be. We
# want to build and develop all of these subprojects together.
#

include(FetchContent)

#
# Declare subprojects.
#
# We use `FetchContent_Declare()` to allow us to build with our subprojects instead
# of building off of intalled packages of them.
#
# The `find_package()` command is what our projects use to retrieve external dependencies
# and its default behavior looks through installed files to get them. So we use `OVERRIDE_FIND_PACKAGE`
# to have it look to FetchContent declarations instead.
#
# Our subprojects exist as subdirectories so we just have their FetchContent
# declarations refer to them by directory path.
#

FetchContent_Declare(CppUtils
  SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/CppUtils"
  OVERRIDE_FIND_PACKAGE
  )

FetchContent_Declare(Boost
  SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/boost"
  OVERRIDE_FIND_PACKAGE
  # Exclude boost from the "all" build target because it is very big and there's no point to building the
  # entirety of the boost libraries anyway.
  EXCLUDE_FROM_ALL
  )

FetchContent_Declare(RapidJSON
  SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/rapidjson"
  OVERRIDE_FIND_PACKAGE
  EXCLUDE_FROM_ALL
  )

FetchContent_Declare(RapidJsonCmakeInterface
  SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/RapidJsonCmakeInterface"
  OVERRIDE_FIND_PACKAGE
  )

FetchContent_Declare(MeddySDK
  SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/MeddySDK"
  OVERRIDE_FIND_PACKAGE
  )

FetchContent_Declare(MeddyCLI
  SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/MeddyCLI"
  OVERRIDE_FIND_PACKAGE
  )

#
# Add subprojects.
#
# We use `FetchContent_MakeAvailable()` because it avoids project duplication for
# us. If we were to use `add_subdirectory()` ourselves directly, we would have to set up
# guards against adding subdirectories multiple times. That's prone to happening
# when a project is needed as a dependency several times.
#

FetchContent_MakeAvailable(CppUtils)

FetchContent_MakeAvailable(Boost)

# Save the variable's original value.
if(DEFINED CMAKE_POLICY_VERSION_MINIMUM)
  set(CMAKE_POLICY_VERSION_MINIMUM_original_value "${CMAKE_POLICY_VERSION_MINIMUM}")
endif()

# Set the variable for this subdirectory to avoid configuration errors.
set(CMAKE_POLICY_VERSION_MINIMUM 3.5)

FetchContent_MakeAvailable(RapidJSON)

# Restore the variable's original value.
if(DEFINED CMAKE_POLICY_VERSION_MINIMUM_original_value)
  set(CMAKE_POLICY_VERSION_MINIMUM "${CMAKE_POLICY_VERSION_MINIMUM_original_value}")
  unset(CMAKE_POLICY_VERSION_MINIMUM_original_value)
else()
  unset(CMAKE_POLICY_VERSION_MINIMUM)
endif()

FetchContent_MakeAvailable(RapidJsonCmakeInterface)

FetchContent_MakeAvailable(MeddySDK)

FetchContent_MakeAvailable(MeddyCLI)
